@@ -554,6 +554,173 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
+DECL|method|testMap
+specifier|public
+name|void
+name|testMap
+parameter_list|()
+block|{
+comment|// see SOLR-9740, the second fq param was being dropped.
+specifier|final
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+index|[]
+argument_list|>
+name|request
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|request
+operator|.
+name|put
+argument_list|(
+literal|"fq"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"zero"
+block|,
+literal|"${one_ref}"
+block|,
+literal|"two"
+block|,
+literal|"${three_ref}"
+block|}
+argument_list|)
+expr_stmt|;
+name|request
+operator|.
+name|put
+argument_list|(
+literal|"one_ref"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"one"
+block|}
+argument_list|)
+expr_stmt|;
+name|request
+operator|.
+name|put
+argument_list|(
+literal|"three_ref"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"three"
+block|}
+argument_list|)
+expr_stmt|;
+name|Map
+name|expanded
+init|=
+name|MacroExpander
+operator|.
+name|expand
+argument_list|(
+name|request
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"zero"
+argument_list|,
+operator|(
+operator|(
+name|String
+index|[]
+operator|)
+name|expanded
+operator|.
+name|get
+argument_list|(
+literal|"fq"
+argument_list|)
+operator|)
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"one"
+argument_list|,
+operator|(
+operator|(
+name|String
+index|[]
+operator|)
+name|expanded
+operator|.
+name|get
+argument_list|(
+literal|"fq"
+argument_list|)
+operator|)
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"two"
+argument_list|,
+operator|(
+operator|(
+name|String
+index|[]
+operator|)
+name|expanded
+operator|.
+name|get
+argument_list|(
+literal|"fq"
+argument_list|)
+operator|)
+index|[
+literal|2
+index|]
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"three"
+argument_list|,
+operator|(
+operator|(
+name|String
+index|[]
+operator|)
+name|expanded
+operator|.
+name|get
+argument_list|(
+literal|"fq"
+argument_list|)
+operator|)
+index|[
+literal|3
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
